# apas

./: .apas  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile.server  Dockerfile.web  Makefile  PLAN.md  README.md  apas-server.toml  claude.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
crates/client-cli/: Cargo.toml  build.rs
crates/client-cli/src/: auth.rs  claude.rs  config.rs  main.rs  project.rs  pty.rs  update.rs
crates/client-cli/src/mode/: dual_pane.rs  hybrid.rs  local.rs  mod.rs  remote.rs
crates/client-cli/src/tui/: app.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  main.rs  state.rs  storage.rs
crates/server/src/db/: mod.rs  models.rs
crates/server/src/routes/: auth.rs  health.rs  mod.rs  share.rs  ws_cli.rs  ws_web.rs
crates/server/src/session/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: messages.rs
