[package]
name = "apas"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apas"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# WebSocket client
tokio-tungstenite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Config
toml = { workspace = true }
directories = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hostname = "0.4.2"
ctrlc = "3.4"
