[package]
name = "apas-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apas-server"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

# Concurrent state
dashmap = "5"
rand = "0.8"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "sendmail-transport"] }
